[gd_scene load_steps=11 format=3 uid="uid://c6rcddcewp3s6"]

[ext_resource type="PackedScene" uid="uid://col4ncuar707o" path="res://Scenes/battle_scene.tscn" id="1_a2doi"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="2_1l3wp"]
[ext_resource type="PackedScene" uid="uid://c8tbmwqdapnsc" path="res://Scenes/shop_scene.tscn" id="2_mjwp7"]
[ext_resource type="PackedScene" uid="uid://haftrks0la1y" path="res://Scenes/end_of_round_screen.tscn" id="3_cl8ig"]
[ext_resource type="Script" path="res://Scripts/main_scene_manager.gd" id="4_7byqg"]
[ext_resource type="PackedScene" uid="uid://cpf7fw0chw6s8" path="res://Scenes/select_sten.tscn" id="5_x5bfc"]
[ext_resource type="Shader" path="res://shaders/scrolling_bg.gdshader" id="6_v2p2u"]
[ext_resource type="Texture2D" uid="uid://cdyy1jtutuqg5" path="res://Assets/images/Meny/bg.png" id="7_b5h8l"]
[ext_resource type="Texture2D" uid="uid://xbximykba1os" path="res://Assets/images/kort/Angry guy_card.png" id="9_fyc8c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5n803"]
shader = ExtResource("6_v2p2u")

[node name="Main" type="Node2D"]
position = Vector2(0, 1.90735e-06)

[node name="BattleScene" parent="." instance=ExtResource("1_a2doi")]

[node name="ShopScene" parent="." instance=ExtResource("2_mjwp7")]
position = Vector2(3840, 0)

[node name="EndOfRoundScreen" parent="." instance=ExtResource("3_cl8ig")]
position = Vector2(7680, 0)

[node name="MainSceneManager" type="Node2D" parent="."]
script = ExtResource("4_7byqg")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.775063, 0.775063, 0.775063, 1)
z_index = -100
texture_filter = 1
material = SubResource("ShaderMaterial_5n803")
offset_left = -1920.0
offset_right = -1536.0
offset_bottom = 216.0
scale = Vector2(5, 5)
mouse_filter = 2
texture = ExtResource("7_b5h8l")
stretch_mode = 1

[node name="SelectSten" parent="." instance=ExtResource("5_x5bfc")]
position = Vector2(-1920, -1.90735e-06)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("2_1l3wp")

[node name="ColorRect" type="ColorRect" parent="."]
clip_children = 2
z_index = 1000
offset_left = -1920.0
offset_top = -1080.0
pivot_offset = Vector2(960, 1080)
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -32.0
offset_right = 24.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(4, 4)
pivot_offset = Vector2(24, 32)
texture = ExtResource("9_fyc8c")

[node name="ColorRect2" type="ColorRect" parent="."]
clip_children = 2
z_index = 1000
offset_left = -1920.0
offset_top = 1080.0
offset_bottom = 2160.0
pivot_offset = Vector2(960, 0)
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -32.0
offset_right = 24.0
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(24, 32)
texture = ExtResource("9_fyc8c")
